; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_growable_string_init.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_growable_string_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d_growable_string = type { i64, i64, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.d_growable_string*, i64)* @d_growable_string_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d_growable_string_init(%struct.d_growable_string* %0, i64 %1) #0 {
  %3 = alloca %struct.d_growable_string*, align 8
  %4 = alloca i64, align 8
  store %struct.d_growable_string* %0, %struct.d_growable_string** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.d_growable_string*, %struct.d_growable_string** %3, align 8
  %6 = getelementptr inbounds %struct.d_growable_string, %struct.d_growable_string* %5, i32 0, i32 3
  store i32* null, i32** %6, align 8
  %7 = load %struct.d_growable_string*, %struct.d_growable_string** %3, align 8
  %8 = getelementptr inbounds %struct.d_growable_string, %struct.d_growable_string* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.d_growable_string*, %struct.d_growable_string** %3, align 8
  %10 = getelementptr inbounds %struct.d_growable_string, %struct.d_growable_string* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.d_growable_string*, %struct.d_growable_string** %3, align 8
  %12 = getelementptr inbounds %struct.d_growable_string, %struct.d_growable_string* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp ugt i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.d_growable_string*, %struct.d_growable_string** %3, align 8
  %17 = load i64, i64* %4, align 8
  %18 = call i32 @d_growable_string_resize(%struct.d_growable_string* %16, i64 %17)
  br label %19

19:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @d_growable_string_resize(%struct.d_growable_string*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
